logs/fea_err_36787290.txt
fea_petsc_solverAndPC.cpp: In function ‘int main(int, char**)’:
fea_petsc_solverAndPC.cpp:381:25: error: ‘ksp’ was not declared in this scope
  381 |         ierr = KSPSetUp(ksp); CHKERRQ(ierr);
      |                         ^~~
fea_petsc_solverAndPC.cpp:383:45: error: ‘U’ was not declared in this scope
  383 |         ierr = VecCreate(PETSC_COMM_WORLD, &U); CHKERRQ(ierr);
      |                                             ^
make: *** [Makefile:28: fea_petsc_solverAndPC.exe] Error 1
--------------------------------------------------------------------------
prterun was unable to launch the specified application as it lacked
permissions to execute an executable:

   Executable: ./fea_petsc_solverAndPC.exe
   Node: gl3027

while attempting to start process rank 0.
--------------------------------------------------------------------------
